feat: 添加附近公交车站显示及详细信息功能
在index.html中添加了信息展示容器，并在style.css中定义了相关样式。在main.js中实现了获取附近公交车站的功能，并根据距离排序显示。同时，添加了点击车站名称获取详细信息的交互功能，通过调用API获取公交车站的实时信息并展示。

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <option value="500">500m</option>
             </select>
         </span>
-
+        <div id="info-container">
+            <div id="info-details"></div>
+        </div>
     </main>
 </body>
 </html>
