--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/css/ol.css" 
+    type="text/css">
+    <script 
+    src="https://cdn.jsdelivr.net/gh/openlayers/openlayers.github.io@master/en/v6.4.3/build/ol.js">
+    </script>
     <title>A2</title>
 </head>
 <body>
@@ -23,8 +28,8 @@
             </select>
         </span>
         <div id="info-container">
-            <div id="info-details"></div>
         </div>
     </main>
+    <script src="main.js"></script>
 </body>
 </html>
